--- a/src/pages/tca.module.css
+++ b/src/pages/tca.module.css
@@ -1,14 +1,16 @@
 .container {
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    /* background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
     padding: 5rem 2rem;
     margin: 2.2rem 0;
+    background-color: var(--tcabg);
 }
 
 .content {
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
-    color: #ffffff;
+
+    color: var(--txtcolour);
 }
 
 .title {
