--- a/src/pages/latestreview.module.css
+++ b/src/pages/latestreview.module.css
@@ -2,7 +2,7 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 2rem;
-    background-color: #f9fafb;
+    /* background-color: ; */
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 12px;
 }
@@ -12,7 +12,7 @@
     font-weight: 700;
     text-align: center;
     margin-bottom: 2rem;
-    color: #2d3748;
+    color: var(--feedbackcolour);
 }
 
 .grid {
@@ -22,7 +22,7 @@
 }
 
 .card {
-    background-color: #ffffff;
+    background-color: var(--feedbackcolour);
     border-radius: 12px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
